Update status message for website visitors.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,2 +1,2 @@
-<h1>Hello World Webapp</h1>
-<a href="/hello">Hello Servlet</a>
+<i>We are currently under development and trying to build unicorns.</i> <br>
+<i>Please visit soon, kind stranger.</i>
